# triton-sam2

./: .gitignore  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  test_sam2.py
client_examples/: inference_client.py
k8s/: deployment.yaml  gateway.yaml  grpc-test.py  kustomization.yaml  pvc.yaml  sam-service-triton-cert.yaml  service.yaml  triton-server-rb.yaml  triton-server-sa.yaml
model_repository/sam1_decoder/: config.pbtxt
model_repository/sam1_encoder/: config.pbtxt
model_repository/sam2_decoder/: config.pbtxt
model_repository/sam2_encoder/: config.pbtxt
model_repository/sam2_encoder_jpeg/: config.pbtxt
model_repository/sam2_encoder_jpeg/1/: .gitkeep
model_repository/sam2_preprocess/: config.pbtxt
model_repository/sam2_preprocess/1/: model.py
model_repository/sam3_decoder/: config.pbtxt
model_repository/sam3_encoder/: config.pbtxt
scripts/: benchmark_sam2.py  benchmark_sam3.py  download_sam1.sh  download_sam2.sh  download_sam3.py  download_sam3.sh  download_sam3_onnx.py  export_sam1_to_onnx.py  export_sam2_to_onnx.py  export_sam3_to_onnx.py  hf_login.py
triton_sam/: __init__.py  client.py
triton_sam/tests/: __init__.py  test_basic.py  test_sam3.py  test_speculative.py
triton_sam2/: __init__.py  speculative_client.py
triton_sam2/tests/: __init__.py  test_basic.py  test_speculative.py
