[project]
name = "triton-sam"
version = "0.1.0"
description = "GPU-accelerated image segmentation using SAM2 on NVIDIA Triton Inference Server"
authors = [{name = "HHMI Janelia", email = "scicompsoft@janelia.hhmi.org"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Janelia Open-Source Software License"}

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "onnx>=1.14.0",
    "onnxscript>=0.1.0",
    "onnxruntime-gpu>=1.16.0",
    "tritonclient[all]>=2.40.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["triton_sam", "triton_sam.tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

# Note: No PyPI dependencies needed at install time
# SAM2 will be installed via the install-sam2 task after cloning

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
pip = "*"
numpy = ">=1.24.0"
opencv = ">=4.8.0"
onnx = ">=1.14.0"
requests = ">=2.31.0"
pillow = ">=10.0.0"
wget = "*"

[tool.pixi.pypi-dependencies]
torch = ">=2.0.0"
torchvision = ">=0.15.0"
huggingface-hub = ">=0.20.0"
onnxscript = ">=0.1.0"

[tool.pixi.tasks]
# =============================================================================
# SAM1 Tasks
# =============================================================================

# Download SAM1 model checkpoints
download-sam1-h = "bash scripts/download_sam1.sh vit_h"
download-sam1-l = "bash scripts/download_sam1.sh vit_l"
download-sam1-b = "bash scripts/download_sam1.sh vit_b"

# Clone SAM1 repository if not present
clone-sam1 = { cmd = "git clone https://github.com/facebookresearch/segment-anything.git sam1_repo || echo 'SAM1 repository already exists'", depends-on = [] }

# Install SAM1 from cloned repository
install-sam1 = { cmd = "python -m pip install -e sam1_repo", depends-on = ["clone-sam1"] }

# Export SAM1 to ONNX
export-sam1 = { cmd = """
python scripts/export_sam1_to_onnx.py \
    --checkpoint checkpoints/sam_vit_h_4b8939.pth \
    --model-type vit_h \
    --output-dir model_repository \
    --device cpu
""", depends-on = ["download-sam1-h", "install-sam1"] }

# Full SAM1 setup
setup-sam1 = { depends-on = ["download-sam1-h", "install-sam1", "export-sam1"] }

# =============================================================================
# SAM2 Tasks
# =============================================================================

# Download SAM2 model checkpoints
download-tiny = "bash scripts/download_sam2.sh tiny"
download-small = "bash scripts/download_sam2.sh small"
download-base = "bash scripts/download_sam2.sh base_plus"
download-large = "bash scripts/download_sam2.sh large"

# Clone SAM2 repository if not present
clone-sam2 = { cmd = "git clone https://github.com/facebookresearch/segment-anything-2.git sam2_repo || echo 'SAM2 repository already exists'", depends-on = [] }

# Install SAM2 from cloned repository
install-sam2 = { cmd = "python -m pip install -e sam2_repo", depends-on = ["clone-sam2"] }

# Export SAM2 to ONNX
export-sam2 = { cmd = """
python scripts/export_sam2_to_onnx.py \
    --checkpoint checkpoints/sam2.1_hiera_base_plus.pt \
    --model-cfg sam2_repo/sam2/configs/sam2.1/sam2.1_hiera_b+.yaml \
    --output-dir model_repository \
    --device cpu
""", depends-on = ["download-base", "install-sam2"] }

# Alias for backward compatibility
export-onnx = { depends-on = ["export-sam2"] }

# Full SAM2 setup
setup = { depends-on = ["download-base", "install-sam2", "export-sam2"] }
setup-sam2 = { depends-on = ["setup"] }

# =============================================================================
# SAM3 Tasks
# =============================================================================

# Download pre-exported SAM3 Tracker ONNX models from onnx-community
download-sam3-onnx = "python scripts/download_sam3_onnx.py"

# Full SAM3 setup (just download pre-exported ONNX models)
setup-sam3 = { depends-on = ["download-sam3-onnx"] }

# =============================================================================
# Combined Setup Tasks
# =============================================================================

# Setup all models (SAM1 + SAM2 + SAM3)
setup-all = { depends-on = ["setup-sam1", "setup-sam2", "setup-sam3"] }

# HuggingFace authentication (needed for some models)
hf-login = "python scripts/hf_login.py"

# Run tests
test-sam2 = "python -m triton_sam.tests.test_basic"
test-sam3 = "python -m triton_sam.tests.test_sam3"
test-speculative = "python -m triton_sam.tests.test_speculative"

# Benchmark SAM2 pipeline (image mode)
benchmark-sam2 = "python scripts/benchmark_sam2.py"
benchmark-sam2-both = "python scripts/benchmark_sam2.py --both"

# Benchmark SAM3 pipeline (image mode)
benchmark-sam3 = "python scripts/benchmark_sam3.py"
benchmark-sam3-both = "python scripts/benchmark_sam3.py --both"

# Benchmark SAM2 video pipeline (requires -v VIDEO and prompts)
# Example: pixi run benchmark-sam2-video -- -v video.mp4 -p 100 200 -l 1
benchmark-sam2-video = "python scripts/benchmark_sam2.py"

# Benchmark SAM3 video pipeline (requires -v VIDEO and prompts)
# Example: pixi run benchmark-sam3-video -- -v video.mp4 -t "the dog"
benchmark-sam3-video = "python scripts/benchmark_sam3.py"

# Format code
format = "black ."
lint = "ruff check ."

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.4.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
ipython = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
